<resources>
    <string name="app_name">FridgeHub</string>
    <string name="add_product_expiry">add product expiry</string>
    <string name="expire_date">Expire Date:</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="quantity">Quantity:</string>
    <string name="throw_out">Throw Out</string>
    <string name="use_up">Use Up</string>
    <string name="replace_image">Replace Image</string>
    <string name="name">Name:</string>
    <string name="units">units</string>
    <string name="default_days_to_expire">Default days to expire:</string>
    <string name="category">Category:</string>
    <string name="save">Save</string>
    <string name="add_item_to_nfavorites">Add item to \nFavorites</string>
    <string name="days_to_expire">Days to expire</string>
    <string name="remove_from_favorites">Remove from\nfavorites</string>
    <string name="answer">Answer</string>
    <string name="item_name">Item Name</string>
    <string name="remove">Remove</string>
    <string name="please_fill_in_all_fields_correctly">Please fill in all fields correctly</string>
    <string name="please_enter_a_valid_product_name">Please enter a valid product name</string>
    <string name="please_enter_a_valid_number_of_days_to_expire">Please enter a valid number of days to expire</string>
    <string name="breads">Breads</string>
    <string name="are_you_sure_you_want_to_discard_changes">Are you sure you want to discard changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="days">days</string>
    <string name="name_min_3_characters">Name (min 3 characters)</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="namee">Name</string>
    <string name="password_min_6_digits">Password (min 6 digits)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="register_yourself">Register yourself</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello">Hello,</string>
    <string name="please_enter_a_valid_quantity">Please enter a valid quantity</string>
    <string name="please_enter_valid_dates">Please enter \nvalid dates</string>
    <string name="expiry_date_must_be_after_buying_date">Expiry date must be after buying date</string>
    <string name="please_login_to_add_items">Please login to add items</string>
    <string name="back" >back</string>
    <string name="add_item_to_shopping_list">Add item to shopping list</string>
    <string name="add">Add</string>
    <string name="amount_measure">Amount Measure</string>
    <string name="product_name">Product Name</string>
    <string name="image_view">image view</string>
    <string name="create_new_fridge">Create New Fridge</string>
    <string name="fridge_name">Fridge Name:</string>
    <string name="password">Password:</string>
    <string name="mobile_number_10_digits">Mobile number (10 digits)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_following_details">Enter the following details</string>
    <string name="we_will_send_to_the_registered_email">We will send to the registered email</string>
    <string name="email_address">Email address</string>
    <string name="next">Next</string>
    <string name="location">Location:</string>
    <string name="set_password">Set Password</string>
    <string name="enter_the_otp_received_below">enter the otp received below</string>
    <string name="otp_4_characters">otp 4 characters</string>
    <string name="new_password_min_4_digits">new password min 4 digits</string>
    <string name="submit">submit</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_sign_up_now">don\'t have an account? sign up now</string>
    <string name="x_days_for">X days for</string>
    <string name="measure">Measure:</string>
    <string name="buying_date">Buying Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="item_title">Item Title</string>
    <string name="xxx_days">XXX days</string>
    <string name="add_item_to_fridge">Add item to fridge</string>
    <string name="product">Product:</string>
    <string name="add_item_nto_shpping_list">Add item to shopping list</string>
    <string name="date_added">Date added:</string>
    <string name="_null">NULL</string>
    <string name="find_supermarkets_nearby">Click here to find supermarkets nearby</string>
    <string name="google_maps_link">Google Maps link</string>
    <string name="insert_email_password">Insert E-mail and password</string>
    <string name="Sign_in_successful">Sign in successful</string>
    <string name="authentication_failed">Authentication failed: %1$s</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="password_email_sent">Password reset email sent</string>
    <string name="error_sending_password_reset_email">Error sending password reset email</string>
    <string name="email_label">E-mail: %1$s</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="helloExclamationMark">Hello!</string>
    <string name="failed_fetch_user_name">Failed to fetch user name</string>
    <string name="please_log_in">Please log in</string>
    <string name="please_insert_name">Please insert a name</string>
    <string name="password_length_error">Password needs to be at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="failed_to_save_user">Failed to save user: %1$s</string>
    <string name="fill_all_fields">Please fill up all fields</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="failed_to_change_password">Failed to change password: %1$s</string>
    <string name="resetting_to_default_items">Resetting to default items...</string>
    <string name="added_successfully">Added successfully</string>
    <string name="failed_to_add_item">Failed to add item: %1$s</string>
    <string name="expires_in_days">Expires in: %1$d days</string>
    <string name="expires_today">Expires today</string>
    <string name="expired_before_days">Expired before: %1$d days</string>
    <string name="item_deleted_successfully">Item deleted successfully</string>
    <string name="failed_to_delete_item_in_fridge">Failed to delete item:</string>
    <string name="shopping_list_clicked">Shopping list clicked</string>
    <string name="favorite_items_clicked">Favorite items clicked</string>
    <string name="enter_custom_product_name">Enter Custom Product Name</string>
    <string name="other">Other</string>
    <string name="item_exists">Item Exists</string>
    <string name="replace_or_discard_message">An item with this name already exists. Do you want to replace it or discard the changes?</string>
    <string name="replace">Replace</string>
    <string name="discard">Discard</string>
    <string name="insert_number">Insert Number</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
    <string name="reset_to_default_items">Reset to Default Items</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_reset_to_default_items">Are you sure you want to reset to default items?</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="quantity_text">Quantity: %1$d</string>
    <string name="address_text">Address: %1$s</string>
    <string name="unknown_address">Unknown address</string>
    <string name="failed_to_delete_item">Failed to delete item: %1$s</string>
    <string name="google_maps_key">AIzaSyCrMtOEQWWeKuQZOqRnkojPkrvx76oxX-M</string>
    <string name="nearest_supermarket">The nearest supermarket nearby is: </string>
    <string name="allow_your_location">Allow your location</string>
    <string name="we_will_need_your_location_to_give_you_better_experience">We will need your location to give you better experience</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="permission_denied">permission denied</string>
    <string name="settings">settings</string>
    <string name="permission_required">permission required</string>
    <string name="enter_custom_product_name_msg">Enter custom product name</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="please_wait">please wait...</string>
    <string name="manage_your_fridge_easily">Manage Your Fridge Easily!</string>
    <string name="my_location_label">My Location</string>
    <string name="my_fridge_label">My Fridge</string>
    <string name="my_shopping_list_label">My Shopping List</string>
    <string name="empty">Empty</string>
    <string name="top_picks">Top Picks</string>
    <string name="your_cart">Your cart</string>
    <string name="your_fridge_is_empty">Your fridge is empty!</string>
    <string name="my_shopping_list">My shopping list</string>
    <string name="my_favorite_items">My favorite items</string>
    <string name="my_profile">My profile</string>
    <string name="my_location">My Location</string>
    <string name="reset_favorite">reset</string>
    <string name="password_reset_email_sent">an email to reset password was sent</string>
    <string name="location_permission_denied_explanation">Location permission was not granted. To enjoy a better user experience, we recommend enabling location permission through the settings.</string>
    <string name="change_password">Change Password</string>
    <string name="enter_the_following">Enter the following:</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="no_supermarkets_found">No supermarkets found nearby</string>
    <string name="error_finding_supermarkets">Error finding supermarkets</string>
    <string name="swipe_to_add_cart">Swipe right to add to cart</string>
    <string name="quantity_x">Quantity: X</string>
    <string name="empty_fridge">empty_fridge</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="location_label">My location:</string>
    <string-array name="categories">
        <item>Breads</item>
        <item>Dairy</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Sauces</item>
        <item>Fish</item>
        <item>Other</item>
    </string-array>
    <string-array name="unit_measures">
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Milliliters</item>
        <item>Liters</item>
        <item>Pieces</item>
        <item>Packets</item>
        <item>Boxes</item>
    </string-array>
    <string-array name="default_food_names">
        <item>Bread</item>
        <item>Butter</item>
        <item>Eggs</item>
        <item>Milk</item>
        <item>Yellow Cheese</item>
        <item>Yogurt</item>
        <item>Chicken</item>
        <item>Ground Beef</item>
        <item>Carrot</item>
        <item>Cucumber</item>
        <item>Lettuce</item>
        <item>Tomato</item>
        <item>Salmon</item>
        <item>Ketchup</item>
        <item>Mayonnaise</item>
        <item>Mustard</item>
    </string-array>
</resources>