<?xml version="1.0" encoding="utf-8"?><!-- Logo designed by Naveen -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_password_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkerCyan">

    <RelativeLayout
        android:id="@+id/forgotPasswordProgressDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <!-- Header TextView -->
        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/set_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imgForgotLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/image_view"
            android:src="@drawable/refrigerator_svgrepo_com" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgForgotLogo"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_the_following"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etOTP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/otp_4_characters"
                android:background="@drawable/rounder_border_for_view"
                android:drawableStart="@drawable/ic_icon_password"
                android:drawablePadding="4dp"
                android:hint="@string/current_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="14dp"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOTP"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/new_password_min_4_digits"
                android:background="@drawable/rounder_border_for_view"
                android:drawableStart="@drawable/ic_icon_password"
                android:drawablePadding="4dp"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="14dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirmForgotPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNewPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/confirm_password"
                android:background="@drawable/rounder_border_for_view"
                android:drawableStart="@drawable/ic_icon_password"
                android:drawablePadding="4dp"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:padding="14dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etConfirmForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/fridgeColor"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>