<?xml version="1.0" encoding="utf-8"?><!-- Logo designed by Naveen -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkerCyan"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/darkerCyan"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/arrow_back"
            android:layout_width="35dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/refrigerator_svgrepo_com"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/e_mail_address"
                android:textColor="@color/white"
                android:textSize="20sp" />



            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/fridgeColor"
                android:text="@string/change_password"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/fridgeColor"
                android:text="@string/sign_out"
                android:textColor="#fff"
                android:textSize="20sp" />



        </LinearLayout>

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>