<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fridgeColor"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/add_item_to_nfavorites"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/add_photo_svgrepo_com" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/dish"
                    android:fontFamily="@font/amaranth"
                    android:hint="@string/product_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_days_to_expire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/expire_svgrepo_com"
                    android:fontFamily="@font/amaranth"
                    android:hint="@string/days_to_expire"
                    android:inputType="number"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/expire_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_frame"
            android:dropDownHorizontalOffset="8dp"
            android:dropDownVerticalOffset="8dp"
            android:fontFamily="@font/amaranth"
            android:padding="8dp" />

    </LinearLayout>


    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/fridgeColor"
        android:fontFamily="@font/amaranth"
        android:foregroundGravity="center_horizontal"
        android:layout_marginEnd="16dp"
        android:text="@string/add" />

</LinearLayout>